# fun.hpp

./: .codecov.yml  .travis.yml  CMakeLists.txt  README.md
headers/fun/basic/: _basic.hpp
headers/fun/classes/: _classes.hpp  alternative.hpp  applicative.hpp  eq.hpp  foldable.hpp  functor.hpp  monad.hpp  monoid.hpp  num.hpp  ord.hpp
headers/fun/instances/: _instances.hpp  alternative.hpp  applicative.hpp  eq.hpp  foldable.hpp  functor.hpp  monad.hpp  monoid.hpp  num.hpp  ord.hpp
headers/fun/types/: _types.hpp  all.hpp  any.hpp  box.hpp  maybe.hpp  product.hpp  sum.hpp
include/fun/basic/: _basic.hpp
include/fun/classes/: _classes.hpp  alternative.hpp  applicative.hpp  eq.hpp  foldable.hpp  functor.hpp  monad.hpp  monoid.hpp  num.hpp  ord.hpp
include/fun/instances/: alternative.hpp  applicative.hpp  eq.hpp  foldable.hpp  functor.hpp  monad.hpp  monoid.hpp  num.hpp  ord.hpp
include/fun/types/: any.hpp  box.hpp  maybe.hpp  product.hpp  sum.hpp
scripts/: upload_coverage.sh
untests/: CMakeLists.txt  alternative_tests.cpp  applicative_tests.cpp  box_tests.cpp  catch_main.cpp  eq_tests.cpp  foldable_tests.cpp  functor_tests.cpp  maybe_tests.cpp  monad_tests.cpp  monoid_tests.cpp  num_tests.cpp  ord_tests.cpp  readme_tests.cpp
